--- a/app/styles/_components.header.css
+++ b/app/styles/_components.header.css
@@ -1,3 +1,5 @@
+@import "_settings.breakpoints.css";
+
 .c-header {
   align-items: center;
   background-color: var(--c-blue-bright);
@@ -20,4 +22,11 @@
 .c-header__intro {
   font-size: 1.5rem;
   line-height: 1.33;
+}
+
+@media (--bp-huge) {
+  .c-header__intro {
+    font-size: 2.75rem;
+    line-height: 1.22;
+  }
 }
