--- a/app/styles/_settings.fonts.css
+++ b/app/styles/_settings.fonts.css
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'visuelt';
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
   src: url(../fonts/visuelt-medium.woff2) woff2,
        url(../fonts/visuelt-medium.woff) woff;
 }
