--- a/app/styles/_settings.fonts.css
+++ b/app/styles/_settings.fonts.css
@@ -2,14 +2,14 @@
   font-family: 'visuelt';
   font-style: normal;
   font-weight: normal;
-  src: url(../fonts/visuelt-regular.woff2) woff2,
-       url(../fonts/visuelt-regular.woff) woff;
+  src: url(../fonts/visuelt-regular.woff2) format('woff2'),
+       url(../fonts/visuelt-regular.woff) format('woff');
 }
 
 @font-face {
   font-family: 'visuelt';
   font-style: normal;
   font-weight: 500;
-  src: url(../fonts/visuelt-medium.woff2) woff2,
-       url(../fonts/visuelt-medium.woff) woff;
+  src: url(../fonts/visuelt-medium.woff2) format('woff2'),
+       url(../fonts/visuelt-medium.woff) format('woff');
 }
