:bug: Fix max-width for arrow decoration

--- a/app/styles/_components.decoration.css
+++ b/app/styles/_components.decoration.css
@@ -29,6 +29,7 @@
 .c-decoration--bottom .c-decoration__item--arrow {
   align-self: center;
   margin: 1.5rem 0 9.625rem;
+  max-width: 18.75rem;
   width: 50%;
 }
 
