--- a/app/styles/_settings.fonts.css
+++ b/app/styles/_settings.fonts.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'visuelt';
   font-style: normal;
+  font-display: swap;
   font-weight: normal;
   src: url(../fonts/visuelt-regular.woff2) format('woff2'),
        url(../fonts/visuelt-regular.woff) format('woff');
@@ -9,6 +10,7 @@
 @font-face {
   font-family: 'visuelt';
   font-style: normal;
+  font-display: swap;
   font-weight: 500;
   src: url(../fonts/visuelt-medium.woff2) format('woff2'),
        url(../fonts/visuelt-medium.woff) format('woff');
