:zap: Improve WCAG

--- a/app/styles/_components.headline.css
+++ b/app/styles/_components.headline.css
@@ -83,7 +83,7 @@
 }
 
 .c-headline--contact::before {
-  border: .75rem solid var(--c-blue-bright);
+  border: .75rem solid var(--c-mint);
   bottom: 0;
   content: " ";
   left: 0;
