--- a/app/styles/_components.copyright.css
+++ b/app/styles/_components.copyright.css
@@ -5,8 +5,10 @@
 
 .c-copyright {
   box-shadow: 0 var(--copyright-gap-base) var(--c-blue-bright),
-              0 calc(var(--copyright-gap-base) + var(--copyright-gap)) var(--c-blue-bright),
-              0 calc(var(--copyright-gap-base) + var(--copyright-gap) * 2) var(--c-blue-bright);
+    0 calc(var(--copyright-gap-base) + var(--copyright-gap))
+      var(--c-blue-bright),
+    0 calc(var(--copyright-gap-base) + var(--copyright-gap) * 2)
+      var(--c-blue-bright);
   margin: auto auto calc(var(--copyright-gap-base) + var(--copyright-gap) * 2);
   max-width: 26.875rem;
   text-align: center;
