--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,4 +1,4 @@
-@import "../../node_modules/normalize-css/normalize.css";
+@import "_vendor.normalize.css";
 
 @import "_settings.colors.css";
 @import "_settings.fonts.css";
